better folder hierarchy list

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -27,17 +27,18 @@
    "metadata": {},
    "source": [
     "Expecting file hierarchy:\n",
-    "    root/\n",
-    "        Antarctica_research_2020/\n",
-    "            .git/\n",
-    "            .gitignore\n",
-    "            readme.md\n",
-    "            notebook.ipynb\n",
-    "        data/\n",
-    "            Sesja 1.xlsx\n",
-    "            .\n",
-    "            .\n",
-    "            Sesja 26.xlsx"
+    "    <ul>root/\n",
+    "        <li>Antarctica_research_2020/\n",
+    "            <ul>.git/</ul>\n",
+    "            <ul>.gitignore</ul>\n",
+    "            <ul>readme.md</ul>\n",
+    "            <ul>notebook.ipynb</ul></li>\n",
+    "        <li>data/\n",
+    "            <ul>Sesja 1.xlsx</ul>\n",
+    "            <ul>.</ul>\n",
+    "            <ul>.</ul>\n",
+    "            <ul>Sesja 26.xlsx</ul></li>\n",
+    "    </ul>"
    ]
   },
   {
