working Session object

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,11 +337,26 @@
     "        rels = {x: [] for x in range(1, col_no + 1)}\n",
     "        for person in range(2, col_no + 1):\n",
     "            for entry in range(1, col_no):\n",
-    "                string_value = raw_session_data.iloc[person, entry]\n",
+    "                string_value = str(raw_session_data.iloc[person, entry])\n",
     "                subject_no = raw_session_data.iloc[person, 0]\n",
-    "                rels[subject_no].append(string_value)\n",
+    "                data_point = self.tuple_from_string(string_value)\n",
+    "                rels[subject_no].append(data_point)\n",
     "                \n",
     "        return rels\n",
+    "    \n",
+    "    def tuple_from_string(self, string) -> tuple:\n",
+    "        if string == 'nan':\n",
+    "            return None\n",
+    "        elif len(string) == 4:\n",
+    "            x = int(string[1]) + int(string[0]) * 10\n",
+    "            y = int(string[3]) + int(string[2]) * 10\n",
+    "            return (x, y)\n",
+    "        elif len(string) == 3:\n",
+    "            x = int(string[0])\n",
+    "            y = int(string[2]) + int(string[1]) * 10\n",
+    "            return (x, y)\n",
+    "        else:\n",
+    "            return None\n",
     "    \n",
     "    def find_date(self, raw_session_data) -> str:\n",
     "        for key, col in raw_session_data.iteritems():\n",
@@ -351,12 +366,13 @@
     "                    return regex.group()\n",
     "                \n",
     "    def __str__(self):\n",
-    "        return \"Session from \" + self.date + \" example entry: \" + str(self.relations[1])"
+    "        random = int(numpy.random.rand() * len(ppl_professions))\n",
+    "        return \"Session from \" + self.date + \" example entry: \" + str(self.relations[random]) + \" for \" + str(random)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,14 +383,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Session from 1978-12-29 example entry: [2420, 2518, 1232, 2123, 2430, 1930, 2625, 2921, 1218, 2422, 1716, 2311, 2812, 1526, 2520, 2120, 1224, 2012, 1822, 2915]\n"
+      "Session from 1978-12-29 example entry: [(24, 19), (23, 23), (23, 22), (24, 21), (21, 22), (20, 24), (19, 21), (21, 18), (22, 18), (18, 21), (20, 18), (19, 23), (21, 20), (18, 19), (20, 19), (20, 17), (23, 17), (18, 17), (21, 16), (24, 20)] for 13\n"
      ]
     }
    ],
