building Person object, notice empty entry for #6

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -192,14 +192,14 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>N = 21</td>\n",
+       "      <td>N = 20</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1979-07-01 00:00:00</td>\n",
+       "      <td>1979-03-12 00:00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>ZIM14</td>\n",
+       "      <td>ZIM6</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -230,50 +230,50 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>2719</td>\n",
-       "      <td>2815</td>\n",
-       "      <td>2829</td>\n",
-       "      <td>2826</td>\n",
-       "      <td>2626</td>\n",
-       "      <td>2824</td>\n",
-       "      <td>2426</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>2919</td>\n",
-       "      <td>...</td>\n",
+       "      <td>2420</td>\n",
        "      <td>2417</td>\n",
-       "      <td>2419</td>\n",
-       "      <td>2421</td>\n",
-       "      <td>2423</td>\n",
-       "      <td>2914</td>\n",
-       "      <td>2714</td>\n",
-       "      <td>2724</td>\n",
-       "      <td>2522</td>\n",
-       "      <td>2516</td>\n",
+       "      <td>2430</td>\n",
+       "      <td>2730</td>\n",
+       "      <td>3027</td>\n",
+       "      <td>x</td>\n",
+       "      <td>3217</td>\n",
        "      <td>2425</td>\n",
+       "      <td>1423</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1613</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1832</td>\n",
+       "      <td>2121</td>\n",
+       "      <td>2422</td>\n",
+       "      <td>x</td>\n",
+       "      <td>1628</td>\n",
+       "      <td>1918</td>\n",
+       "      <td>2306</td>\n",
+       "      <td>2908</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2</td>\n",
-       "      <td>2912</td>\n",
-       "      <td>2201</td>\n",
-       "      <td>2311</td>\n",
-       "      <td>2322</td>\n",
-       "      <td>1818</td>\n",
-       "      <td>1710</td>\n",
-       "      <td>3121</td>\n",
-       "      <td>1115</td>\n",
-       "      <td>1119</td>\n",
+       "      <td>2313</td>\n",
+       "      <td>2300</td>\n",
+       "      <td>2509</td>\n",
+       "      <td>1807</td>\n",
+       "      <td>1715</td>\n",
+       "      <td>x</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>2619</td>\n",
        "      <td>...</td>\n",
-       "      <td>3437</td>\n",
-       "      <td>2133</td>\n",
-       "      <td>1434</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>1124</td>\n",
-       "      <td>0733</td>\n",
-       "      <td>1724</td>\n",
-       "      <td>3629</td>\n",
-       "      <td>0517</td>\n",
-       "      <td>0524</td>\n",
+       "      <td>2130</td>\n",
+       "      <td>3022</td>\n",
+       "      <td>2814</td>\n",
+       "      <td>2403</td>\n",
+       "      <td>1428</td>\n",
+       "      <td>2624</td>\n",
+       "      <td>2124</td>\n",
+       "      <td>1723</td>\n",
+       "      <td>1222</td>\n",
+       "      <td>1718</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -281,28 +281,22 @@
        "</div>"
       ],
       "text/plain": [
-       "        0              1     2     3     4     5     6     7     8     9   \\\n",
-       "0      NaN  Pozycja osoby   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
-       "1  Nr O.B.              1     2     3     4     5     6     7     8     9   \n",
-       "2        1           2719  2815  2829  2826  2626  2824  2426  2917  2919   \n",
-       "3        2           2912  2201  2311  2322  1818  1710  3121  1115  1119   \n",
+       "        0              1     2     3     4     5    6     7     8     9   ...  \\\n",
+       "0      NaN  Pozycja osoby   NaN   NaN   NaN   NaN  NaN   NaN   NaN   NaN  ...   \n",
+       "1  Nr O.B.              1     2     3     4     5    6     7     8     9  ...   \n",
+       "2        1           2420  2417  2430  2730  3027    x  3217  2425  1423  ...   \n",
+       "3        2           2313  2300  2509  1807  1715    x  2010  2014  2619  ...   \n",
        "\n",
-       "   ...      12    13    14                   15    16    17    18     19  \\\n",
-       "0  ...  N = 21   NaN   NaN  1979-07-01 00:00:00   NaN   NaN   NaN  ZIM14   \n",
-       "1  ...      12    13    14                   15    16    17    18     19   \n",
-       "2  ...    2417  2419  2421                 2423  2914  2714  2724   2522   \n",
-       "3  ...    3437  2133  1434                 2006  1124  0733  1724   3629   \n",
-       "\n",
-       "     20    21  \n",
-       "0   NaN   NaN  \n",
-       "1    20    21  \n",
-       "2  2516  2425  \n",
-       "3  0517  0524  \n",
+       "       12    13    14                   15    16    17    18    19    20    21  \n",
+       "0  N = 20   NaN   NaN  1979-03-12 00:00:00   NaN   NaN   NaN  ZIM6   NaN   NaN  \n",
+       "1      12    13    14                   15    16    17    18    19    20    21  \n",
+       "2    1613  2010  1832                 2121  2422     x  1628  1918  2306  2908  \n",
+       "3    2130  3022  2814                 2403  1428  2624  2124  1723  1222  1718  \n",
        "\n",
        "[4 rows x 22 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,31 +366,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Person(object):\n",
-    "    def __init__(self, id, date, relations: list):\n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Session from 1978-12-29 example entry: [(24, 19), (23, 23), (23, 22), (24, 21), (21, 22), (20, 24), (19, 21), (21, 18), (22, 18), (18, 21), (20, 18), (19, 23), (21, 20), (18, 19), (20, 19), (20, 17), (23, 17), (18, 17), (21, 16), (24, 20)] for 13\n"
+      "Session from 1978-12-29 example entry: [(18, 12), (5, 20), (34, 33), (32, 28), (25, 36), (27, 15), (31, 33), (11, 23), (8, 9), (2, 22), (18, 20), (31, 8), (27, 30), (16, 31), (9, 18), (20, 29), (2, 7), (15, 18), (6, 32), (13, 21)] for 11\n",
+      "Session from 1980-01-10 example entry: [(34, 35), (23, 22), (32, 29), (32, 33), (30, 31), (37, 4), (28, 29), (27, 27), (25, 25), (23, 16), (25, 14), (17, 23), (20, 17), (21, 19), (35, 6), (18, 13), (15, 26), (38, 10), (39, 38), (39, 3)] for 14\n"
      ]
     }
    ],
    "source": [
-    "test_session = Session(data_dict[1])\n",
-    "print(test_session)"
+    "session_data = [Session(e) for e in data_dict.values()]\n",
+    "print(session_data[0])\n",
+    "print(session_data[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person(object):\n",
+    "    def __init__(self, person_no, particular_person_profession):\n",
+    "        self.person_no = person_no\n",
+    "        self.profession = particular_person_profession\n",
+    "        self.sessions_dict = self.get_all_relations()\n",
+    "        \n",
+    "    def get_all_relations(self) -> dict:\n",
+    "        pass\n",
+    "    \n",
+    "    def get_all_relative_vectors(self) -> dict:\n",
+    "        pass\n",
+    "    \n",
+    "    def get_all_distances(self) -> dict:\n",
+    "        pass\n",
+    "    \n",
+    "    def get_particular_rel_list(self, other: Person) - list:\n",
+    "        pass\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \"\""
    ]
   },
   {
