working Person class, need double check

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6,14 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow\n",
-    "import stellargraph\n",
-    "import numpy\n",
-    "import matplotlib\n",
-    "import os.path\n",
-    "import pandas\n",
-    "import datetime\n",
-    "import re"
+    "import tensorflow   # machine learning library\n",
+    "import stellargraph   # tools for graphs\n",
+    "# import networkx   # more tools for graphs\n",
+    "import numpy   # scientific computation and variable formats library\n",
+    "import matplotlib   # all plotting except graphs\n",
+    "import plotly.graph_objects as plotly   # plotting graphs\n",
+    "import os.path   # interaction with  files and filenames\n",
+    "import pandas   # library for loading and organising data\n",
+    "import datetime   # calendar and dates handling\n",
+    "import re   # I'm using regex, apologies"
    ]
   },
   {
@@ -50,27 +52,27 @@
    "outputs": [],
    "source": [
     "# Let me write in advantage examined peoples' occupations:\n",
-    "ppl_professions = {1: \"to be filled up\",\n",
-    "                  2: \"to be filled up\",\n",
-    "                  3: \"to be filled up\",\n",
-    "                  4: \"to be filled up\",\n",
-    "                  5: \"to be filled up\",\n",
-    "                  6: \"to be filled up\",   # UWAGA - nr 6 przybył na stację 25.04.79r\n",
-    "                  7: \"to be filled up\",\n",
-    "                  8: \"to be filled up\",\n",
-    "                  9: \"to be filled up\",\n",
-    "                  10: \"to be filled up\",\n",
-    "                  11: \"to be filled up\",\n",
-    "                  12: \"to be filled up\",\n",
-    "                  13: \"to be filled up\",\n",
-    "                  14: \"to be filled up\",\n",
-    "                  15: \"to be filled up\",\n",
-    "                  16: \"to be filled up\",\n",
-    "                  17: \"to be filled up\",\n",
-    "                  18: \"to be filled up\",\n",
-    "                  19: \"to be filled up\",\n",
-    "                  20: \"to be filled up\",\n",
-    "                  21: \"to be filled up\"\n",
+    "ppl_professions = {1: \"fisherman\",\n",
+    "                  2: \"cook\",\n",
+    "                  3: \"medic\",\n",
+    "                  4: \"deputy technical manager\",\n",
+    "                  5: \"carpenter\",\n",
+    "                  6: \"driver\",   # UWAGA - nr 6 przybył na stację 25.04.79r\n",
+    "                  7: \"technician\",\n",
+    "                  8: \"chemist\",\n",
+    "                  9: \"meteorologist\",\n",
+    "                  10: \"ichthyologist\",   # study of fish\n",
+    "                  11: \"magnetologist\",\n",
+    "                  12: \"seismologist\",\n",
+    "                  13: \"biologist\",\n",
+    "                  14: \"electrician\",\n",
+    "                  15: \"radiotelegraphist\",\n",
+    "                  16: \"psychologist\",\n",
+    "                  17: \"electronics engineer\",\n",
+    "                  18: \"meteorologist\",\n",
+    "                  19: \"microbiologist\",\n",
+    "                  20: \"parasitologist\",\n",
+    "                  21: \"botanist\"\n",
     "                  }"
    ]
   },
@@ -192,14 +194,14 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>N = 20</td>\n",
+       "      <td>N = 21</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1979-03-12 00:00:00</td>\n",
+       "      <td>1979-10-21 00:00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>ZIM6</td>\n",
+       "      <td>ZIM22</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -230,50 +232,50 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>2420</td>\n",
-       "      <td>2417</td>\n",
-       "      <td>2430</td>\n",
-       "      <td>2730</td>\n",
-       "      <td>3027</td>\n",
-       "      <td>x</td>\n",
-       "      <td>3217</td>\n",
-       "      <td>2425</td>\n",
-       "      <td>1423</td>\n",
+       "      <td>2717</td>\n",
+       "      <td>3014</td>\n",
+       "      <td>3023</td>\n",
+       "      <td>2323</td>\n",
+       "      <td>2312</td>\n",
+       "      <td>2512</td>\n",
+       "      <td>2318</td>\n",
+       "      <td>2623</td>\n",
+       "      <td>3120</td>\n",
        "      <td>...</td>\n",
-       "      <td>1613</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>1832</td>\n",
-       "      <td>2121</td>\n",
+       "      <td>2415</td>\n",
        "      <td>2422</td>\n",
-       "      <td>x</td>\n",
-       "      <td>1628</td>\n",
-       "      <td>1918</td>\n",
-       "      <td>2306</td>\n",
-       "      <td>2908</td>\n",
+       "      <td>3010</td>\n",
+       "      <td>2710</td>\n",
+       "      <td>2521</td>\n",
+       "      <td>2721</td>\n",
+       "      <td>3215</td>\n",
+       "      <td>2115</td>\n",
+       "      <td>2119</td>\n",
+       "      <td>2320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2</td>\n",
-       "      <td>2313</td>\n",
-       "      <td>2300</td>\n",
-       "      <td>2509</td>\n",
-       "      <td>1807</td>\n",
-       "      <td>1715</td>\n",
-       "      <td>x</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>2619</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2130</td>\n",
-       "      <td>3022</td>\n",
-       "      <td>2814</td>\n",
-       "      <td>2403</td>\n",
-       "      <td>1428</td>\n",
-       "      <td>2624</td>\n",
+       "      <td>2312</td>\n",
+       "      <td>2201</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>3418</td>\n",
        "      <td>2124</td>\n",
-       "      <td>1723</td>\n",
-       "      <td>1222</td>\n",
-       "      <td>1718</td>\n",
+       "      <td>2627</td>\n",
+       "      <td>2914</td>\n",
+       "      <td>3407</td>\n",
+       "      <td>1622</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1835</td>\n",
+       "      <td>1616</td>\n",
+       "      <td>0910</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>1511</td>\n",
+       "      <td>2823</td>\n",
+       "      <td>2432</td>\n",
+       "      <td>1830</td>\n",
+       "      <td>1218</td>\n",
+       "      <td>0827</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -281,17 +283,23 @@
        "</div>"
       ],
       "text/plain": [
-       "        0              1     2     3     4     5    6     7     8     9   ...  \\\n",
-       "0      NaN  Pozycja osoby   NaN   NaN   NaN   NaN  NaN   NaN   NaN   NaN  ...   \n",
-       "1  Nr O.B.              1     2     3     4     5    6     7     8     9  ...   \n",
-       "2        1           2420  2417  2430  2730  3027    x  3217  2425  1423  ...   \n",
-       "3        2           2313  2300  2509  1807  1715    x  2010  2014  2619  ...   \n",
+       "        0              1     2     3     4     5     6     7     8     9   \\\n",
+       "0      NaN  Pozycja osoby   NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN   \n",
+       "1  Nr O.B.              1     2     3     4     5     6     7     8     9   \n",
+       "2        1           2717  3014  3023  2323  2312  2512  2318  2623  3120   \n",
+       "3        2           2312  2201  2016  3418  2124  2627  2914  3407  1622   \n",
        "\n",
-       "       12    13    14                   15    16    17    18    19    20    21  \n",
-       "0  N = 20   NaN   NaN  1979-03-12 00:00:00   NaN   NaN   NaN  ZIM6   NaN   NaN  \n",
-       "1      12    13    14                   15    16    17    18    19    20    21  \n",
-       "2    1613  2010  1832                 2121  2422     x  1628  1918  2306  2908  \n",
-       "3    2130  3022  2814                 2403  1428  2624  2124  1723  1222  1718  \n",
+       "   ...      12    13    14                   15    16    17    18     19  \\\n",
+       "0  ...  N = 21   NaN   NaN  1979-10-21 00:00:00   NaN   NaN   NaN  ZIM22   \n",
+       "1  ...      12    13    14                   15    16    17    18     19   \n",
+       "2  ...    2415  2422  3010                 2710  2521  2721  3215   2115   \n",
+       "3  ...    1835  1616  0910                 2007  1511  2823  2432   1830   \n",
+       "\n",
+       "     20    21  \n",
+       "0   NaN   NaN  \n",
+       "1    20    21  \n",
+       "2  2119  2320  \n",
+       "3  1218  0827  \n",
        "\n",
        "[4 rows x 22 columns]"
       ]
@@ -311,7 +319,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The target format for data is a stellargraph graph for each session (session -> data recording occuring every two week). But before that, let me read the data into intermediate objects:"
+    "The target format for data is a stellargraph graph for each session (session -> data recording occuring every two week). But before that, let me read the data into intermediate objects: Session(s) and Person(s).\n",
+    "    Session will hold data in respect to each source data file, organising entries into lists of coordinates marked by examined people - one list for one man for each session.\n",
+    "    Person will organise data in respect to a single individual. Each* individual hold data for all 26 sessions, for convienience repeated in several arrangements.\n",
+    "    \n",
+    "*except mr. 6th, since he arrived later"
    ]
   },
   {
@@ -366,58 +378,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Session from 1978-12-29 example entry: [(18, 12), (5, 20), (34, 33), (32, 28), (25, 36), (27, 15), (31, 33), (11, 23), (8, 9), (2, 22), (18, 20), (31, 8), (27, 30), (16, 31), (9, 18), (20, 29), (2, 7), (15, 18), (6, 32), (13, 21)] for 11\n",
-      "Session from 1980-01-10 example entry: [(34, 35), (23, 22), (32, 29), (32, 33), (30, 31), (37, 4), (28, 29), (27, 27), (25, 25), (23, 16), (25, 14), (17, 23), (20, 17), (21, 19), (35, 6), (18, 13), (15, 26), (38, 10), (39, 38), (39, 3)] for 14\n"
+      "Session from 1980-01-10 example entry: [(35, 7), (39, 7), (41, 1), (6, 32), (29, 11), (18, 15), (9, 26), (27, 22), (20, 12), (39, 3), (40, 10), (13, 26), (18, 19), (33, 13), (19, 23), (31, 14), (23, 13), (23, 25), (12, 30), (23, 19)] for 20\n"
      ]
     }
    ],
    "source": [
     "session_data = [Session(e) for e in data_dict.values()]\n",
-    "print(session_data[0])\n",
+    "# An example entry:\n",
     "print(session_data[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Person(object):\n",
-    "    def __init__(self, person_no, particular_person_profession):\n",
+    "    def __init__(self, person_no, particular_person_profession, session_data):\n",
     "        self.person_no = person_no\n",
     "        self.profession = particular_person_profession\n",
-    "        self.sessions_dict = self.get_all_relations()\n",
+    "        self.sessions_dict = self.get_all_relations(session_data)\n",
+    "        self.relations_vector = self.get_all_relative_vectors(self.sessions_dict)\n",
+    "        self.distances = self.get_all_distances(self.relations_vector)\n",
     "        \n",
-    "    def get_all_relations(self) -> dict:\n",
+    "    def get_all_relations(self, session_data) -> dict:\n",
+    "        out_dict = {x: [] for x in sorted_filenames.keys()}\n",
+    "        for no in out_dict.keys():\n",
+    "            out_dict[no] = session_data[no - 1].relations[self.person_no]\n",
+    "        return out_dict\n",
+    "    \n",
+    "    def get_all_relative_vectors(self, relations) -> dict:\n",
+    "        out_dict = {x: [] for x in sorted_filenames.keys()}\n",
+    "        for no, session in relations.items():\n",
+    "            for relation in session:\n",
+    "                if relation is not None and session[self.person_no - 1] is not None:\n",
+    "                    out_dict[no].append((session[self.person_no - 1][0] - relation[0], session[self.person_no - 1][1] - relation[1]))\n",
+    "                else:\n",
+    "                    out_dict[no].append(None)\n",
+    "        return out_dict\n",
+    "    \n",
+    "    def get_all_distances(self, vectors) -> dict:\n",
+    "        out_dict = {x: [] for x in sorted_filenames.keys()}\n",
+    "        for no, session in vectors.items():\n",
+    "            for vector in session:\n",
+    "                 if vector is not None:\n",
+    "                    out_dict[no].append(self.calc_distance(vector[0], vector[1]))\n",
+    "                 else:\n",
+    "                     out_dict[no].append(None)\n",
+    "        return out_dict\n",
+    "    \n",
+    "    def get_particular_rel_list(self, other) -> list:\n",
     "        pass\n",
     "    \n",
-    "    def get_all_relative_vectors(self) -> dict:\n",
-    "        pass\n",
-    "    \n",
-    "    def get_all_distances(self) -> dict:\n",
-    "        pass\n",
-    "    \n",
-    "    def get_particular_rel_list(self, other: Person) - list:\n",
-    "        pass\n",
+    "    def calc_distance(self, a, b) -> float:\n",
+    "        return numpy.sqrt(numpy.sum((a - b) ** 2))\n",
     "    \n",
     "    def __str__(self):\n",
-    "        return \"\""
+    "        rand_session = int(numpy.random.rand() * 26)\n",
+    "        return \"No. \" + str(self.person_no) + \" being \" + self.profession + \" with distances: \" + str(self.distances[rand_session]) + \"for session \" + str(rand_session)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. 12 being seismologist with distances: [12.0, 4.0, 9.0, 7.0, 12.0, 2.0, 8.0, 9.0, 9.0, 0.0, 16.0, 0.0, 6.0, 17.0, 7.0, 19.0, 19.0, 8.0, 3.0, 16.0]for session 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "people_data = [Person(no, profession, session_data) for no, profession in ppl_professions.items()]\n",
+    "# An example:\n",
+    "rand_ppl = int(numpy.random.rand() * 21)\n",
+    "print(people_data[rand_ppl])"
+   ]
   },
   {
    "cell_type": "code",
