--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
     "        for no, session in relations.items():\n",
     "            for relation in session:\n",
     "                if relation is not None and session[self.person_no - 1] is not None:\n",
-    "                    out_dict[no].append((session[self.person_no - 1][0] - relation[0], session[self.person_no - 1][1] - relation[1]))\n",
+    "                    out_dict[no].append((relation[0] - session[self.person_no - 1][0], relation[1] - session[self.person_no - 1][1]))\n",
     "                else:\n",
     "                    out_dict[no].append(None)\n",
     "        return out_dict\n",
@@ -429,33 +429,33 @@
     "        out_dict = {x: [] for x in sorted_filenames.keys()}\n",
     "        for no, session in vectors.items():\n",
     "            for vector in session:\n",
-    "                 if vector is not None:\n",
+    "                if vector is not None:\n",
     "                    out_dict[no].append(self.calc_distance(vector[0], vector[1]))\n",
-    "                 else:\n",
-    "                     out_dict[no].append(None)\n",
+    "                else:\n",
+    "                    out_dict[no].append(None)\n",
     "        return out_dict\n",
     "    \n",
     "    def get_particular_rel_list(self, other) -> list:\n",
     "        pass\n",
     "    \n",
     "    def calc_distance(self, a, b) -> float:\n",
-    "        return numpy.sqrt(numpy.sum((a - b) ** 2))\n",
+    "        return numpy.sqrt(a ** 2 + b ** 2)\n",
     "    \n",
     "    def __str__(self):\n",
     "        rand_session = int(numpy.random.rand() * 26)\n",
-    "        return \"No. \" + str(self.person_no) + \" being \" + self.profession + \" with distances: \" + str(self.distances[rand_session]) + \"for session \" + str(rand_session)"
+    "        return \"No. \" + str(self.person_no) + \" being \" + self.profession + \" with distances: \" + str(self.distances[rand_session]) + \" for session \" + str(rand_session)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No. 12 being seismologist with distances: [12.0, 4.0, 9.0, 7.0, 12.0, 2.0, 8.0, 9.0, 9.0, 0.0, 16.0, 0.0, 6.0, 17.0, 7.0, 19.0, 19.0, 8.0, 3.0, 16.0]for session 12\n"
+      "No. 1 being fisherman with distances: [0.0, 2.23606797749979, 8.246211251235321, 8.06225774829855, 9.486832980505138, 7.211102550927978, 12.041594578792296, 4.123105625617661, 11.40175425099138, 2.0, 7.0, 12.206555615733702, 6.4031242374328485, 10.770329614269007, 2.8284271247461903, 2.0, 8.246211251235321, 7.810249675906654, 14.212670403551895, 10.198039027185569] for session 5\n"
      ]
     }
    ],
