First questions, answers to be added

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow   # machine learning library\n",
     "import stellargraph   # tools for graphs\n",
-    "# import networkx   # more tools for graphs\n",
+    "import networkx   # more tools for graphs\n",
     "import numpy   # scientific computation and variable formats library\n",
     "import matplotlib   # all plotting except graphs\n",
     "import plotly.graph_objects as plotly   # plotting graphs\n",
@@ -464,6 +464,80 @@
     "# An example:\n",
     "rand_ppl = int(numpy.random.rand() * 21)\n",
     "print(people_data[rand_ppl])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Having defined sessions and persons, now I want to answer following questions:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What was general tendency of marking others on charts?\n",
+    "By general tendency I understand a value telling me if people were viewing others as closer or more far away after time passed. I'm going to get a mean distance for each session for each person and see how those changed, and check the slope of linear regression of given sessions' mean values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let me plot above findings:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let me plot a graph of people by their average bond during the time in Antarctica:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let me create a wieghted graph of relations, one for each session:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = networkx.MultiGraph()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What groups did people created, if any?\n",
+    " -> networkx.algorithms.clique.find_cliques"
    ]
   },
   {
