fixed typos, session_graphs work in progress

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -36,14 +36,14 @@
     "            <ul>.git/</ul>\n",
     "            <ul>.gitignore</ul>\n",
     "            <ul>readme.md</ul>\n",
-    "            <ul>notebook.ipynb</ul></li>\n",
+    "            <ul>notebook.ipynb</ul>\n",
+    "            <ul>img/\n",
+    "                    <ul>example_entry.jpg</ul></ul></li>\n",
     "        <li>data/\n",
     "            <ul>Sesja 1.xlsx</ul>\n",
     "            <ul>.</ul>\n",
     "            <ul>.</ul>\n",
     "            <ul>Sesja 26.xlsx</ul></li>\n",
-    "        <li>img/\n",
-    "                <ul>example_entry.jpg</ul></li>\n",
     "    </ul>"
    ]
   },
@@ -611,22 +611,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are two insights I see after looking on the charts: <br>\n",
+    "There are 5 insights I see after looking on the charts: <br>\n",
     "    <ul>\n",
     "    <li>\"positive\" people were much more conservative in the beggining when judging others</li>\n",
     "    <li>\"negative\" poeple viewed others as more closer at the beggining</li>\n",
     "    <li>something might happened around session no. 5 - that is around 27.2.1979</li>\n",
-    "    <li>there are outliers to be checked - and since i'm dealing with means those aoutliers <b>ARE</b> to be checked</li>\n",
+    "    <li>there are outliers to be checked - and since i'm dealing with means those outliers <b>ARE</b> to be checked</li>\n",
     "    <li>linear approximation might not be the perfect insight</li>\n",
     "    </ul>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -641,7 +634,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session_graps = {x: networkx.MultiGraph() for x in sorted_filenames.keys()}"
+    "session_graps = {x: networkx.MultiGraph() for x in sorted_filenames.keys()}\n",
+    "for session_graph in session_graps.values():\n",
+    "    pass"
    ]
   },
   {
