cumulative centrality graph need fixing

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -775,10 +775,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted cumulative centrality per session: \n",
+      "\n",
+      "driver                    |   3.9698\n",
+      "magnetologist             |   5.6983\n",
+      "botanist                  |   5.7109\n",
+      "technician                |   5.7621\n",
+      "electrician               |   5.7897\n",
+      "seismologist              |   6.1222\n",
+      "radiotelegraphist         |   6.6511\n",
+      "cook                      |   6.6646\n",
+      "deputy technical manager  |   6.6786\n",
+      "psychologist              |   6.8073\n",
+      "carpenter                 |   6.8403\n",
+      "ichthyologist             |   6.9435\n",
+      "chemist                   |   6.9484\n",
+      "meteorologist             |   6.9498\n",
+      "parasitologist            |   7.0858\n",
+      "microbiologist            |   7.1818\n",
+      "electronics engineer      |   7.3665\n",
+      "fisherman                 |   7.6226\n",
+      "biologist                 |   7.7535\n",
+      "medic                     |   7.9417\n",
+      "meteorologist             |   7.9472\n"
+     ]
+    }
+   ],
+   "source": [
+    "cumulative_centrality_per_session = {n: 0 for n in ppl_professions.keys()}\n",
+    "for session in closeness_centrality_per_session:\n",
+    "    for i, value in session.items():\n",
+    "        cumulative_centrality_per_session[i] += value\n",
+    "sorted_cumulative_centrality_per_session = {k: v for k, v in sorted(cumulative_centrality_per_session.items(), key=lambda item: item[1])}\n",
+    "print(\"Sorted cumulative centrality per session: \")\n",
+    "print()\n",
+    "for key, value in sorted_cumulative_centrality_per_session.items():\n",
+    "    print(f\"{ppl_professions[key]:25} | {value:8.4f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
